# Prematch-trader

./: README.md  app (1).py  app.py  backtester.py  cli.py  config.yaml  csv_feed.py  executor.py  licensing.py  mean_reversion.py  odds.py  pyproject.toml  requirements.txt  risk_manager.py  steam_chaser.py
api/: app.py
dashboard/: app.py
